--- a/field.html
+++ b/field.html
@@ -45,7 +45,7 @@
 							<div id="menu">
 								<a href="index.html"style="font-size: 14.5px;">bio</a><br />
 								<br></br>
-								<a href="publications.html"style="font-size: 14.5px;">publications</a><br />
+								<a href="publications.html"style="font-size: 14.5px;">research</a><br />
 								<br></br>
 								<a href="teaching.html"style="font-size: 14.5px;">teaching</a><br />
 								<br></br>
