--- a/posts.html
+++ b/posts.html
@@ -31,7 +31,7 @@
 		
 		<div id="container">
 			<p>
-				<a href="#"><img src="images/header4.png" alt="" border="0" title=""  /></a><br />
+				<a href="#"><img src="images/haryana.jpg" alt="" border="0" title=""  /></a><br />
 			</p>
 		
 		<div >
