--- a/teaching.html
+++ b/teaching.html
@@ -31,7 +31,7 @@
 		
 		<div id="container">
 			<p>
-				<a href="#"><img src="images/indramayu.JPG" style = "width:50;height:100;" alt="" border="0" title=""  /></a><br />
+				<a href="#"><img src="images/indramayu.jpg" style = "width:50;height:100;" alt="" border="0" title=""  /></a><br />
 			</p>
 		
 		<div >
