--- a/field.html
+++ b/field.html
@@ -33,6 +33,7 @@
 		<div id="container">
 			<p>
 				<a href="#"><img src="images/ukraine.jpg" style = "width:50;height:100;" alt="" border="0" title=""  /></a><br />
+				Hora Synyachka, Ivano-Frankivs'ka oblast, Ukraine
 			</p>
 		
 		<div >
