--- a/teaching.html
+++ b/teaching.html
@@ -32,6 +32,7 @@
 		<div id="container">
 			<p>
 				<a href="#"><img src="images/indramayu.jpg" style = "width:50;height:100;" alt="" border="0" title=""  /></a><br />
+				Indramayu, West Java, Indonesia
 			</p>
 		
 		<div >
