--- a/teaching.html
+++ b/teaching.html
@@ -32,7 +32,7 @@
 		<div id="container">
 			<p>
 				<a href="#"><img src="images/ukraine.jpg" style = "width:50;height:100;" alt="" border="0" title=""  /></a><br />
-				Indramayu, West Java, Indonesia
+				<h1>Hora Synyachka, Ivano-Frankivs'ka oblast, Ukraine</h1>
 			</p>
 		
 		<div >
