--- a/publications.html
+++ b/publications.html
@@ -32,7 +32,7 @@
 		<div id="container">
 			<p>
 				<a href="#"><img src="images/header4.png" style = "width:50;height:100;"  alt="" border="0" title=""  /></a><br />
-				Rte Mbour, Fatick, Kaolack, Senegal
+				<h1>Rte Mbour, Fatick, Kaolack, Senegal</h1>
 			</p>
 		
 		<div >
