--- a/posts.html
+++ b/posts.html
@@ -32,7 +32,7 @@
 		<div id="container">
 			<p>
 				<a href="#"><img src="images/haryana.jpg" style = "width:50;height:100;" alt="" border="0" title=""  /></a><br />
-				<p>Kurukshetra, Haryana, India</p>
+				Kurukshetra, Haryana, India
 			</p>
 		
 		<div >
