--- a/teaching.html
+++ b/teaching.html
@@ -32,7 +32,7 @@
 		<div id="container">
 			<p>
 				<a href="#"><img src="images/ukraine.jpg" style = "width:50;height:100;" alt="" border="0" title=""  /></a><br />
-				<h1 style="color:gray;font-size:10px;>Hora Synyachka, Ivano-Frankivs'ka Oblast, Ukraine</h1>
+				<h1 style="color:gray;font-size:10px;">Hora Synyachka, Ivano-Frankivs'ka Oblast, Ukraine</h1>
 			</p>
 		
 		<div >
