--- a/field.html
+++ b/field.html
@@ -33,7 +33,8 @@
 		<div id="container">
 			<p>
 				<a href="#"><img src="images/indramayu.jpg" style = "width:50;height:100;" alt="" border="0" title=""  /></a><br />
-				<h1>Indramayu, West Java, Indonesia</h1>
+				<h1 style="color:gray;font-size:10px;">Indramayu, West Java, Indonesia</h1>
+
 			</p>
 		
 		<div >
