--- a/posts.html
+++ b/posts.html
@@ -32,7 +32,8 @@
 		<div id="container">
 			<p>
 				<a href="#"><img src="images/haryana.jpg" style = "width:50;height:100;" alt="" border="0" title=""  /></a><br />
-				Kurukshetra, Haryana, India
+				<h1 style="color:gray;font-size:10px;">Kurukshetra, Haryana, India</h1>
+				
 			</p>
 		
 		<div >
