--- a/publications.html
+++ b/publications.html
@@ -31,13 +31,14 @@
 		
 		<div id="container">
 			<p>
-				<a href="#"><img src="images/header4.png" style = "width:50;height:100;"  alt="" border="0" title=""  /></a><br />
+				<img src="images/header4.png" style = "width:50;height:100;"  alt="" border="0" title=""  /><br />
 	
 				<h1 style="color:gray;font-size:10px;"> Mbour, Fatick, Kaolack, Senegal</h1>
 			</p>
-		
+	
 		<div >
-				<h1><font color="#666547"><noframes></noframes> kathryn</font> <font color="#b3cde0"><noframes></noframes> (katya)</font>  <font color="#6497b1"><noframes></noframes> vasilaky</font></h1>
+			<a href="index.html" style="font-size: 14.5px;"><h1><font color="#666547"><noframes></noframes> kathryn</font> <font color="#b3cde0"><noframes></noframes> (katya)</font>  <font color="#6497b1"><noframes></noframes> vasilaky</font></h1></a><br />
+				
 		</div>
 				<div id="sidebar">
 						
