--- a/teaching.html
+++ b/teaching.html
@@ -36,7 +36,7 @@
 			</p>
 		
 		<div >
-				<h1><font color="#666547"><noframes></noframes> kathryn</font> <font color="#b3cde0"><noframes></noframes> (katya)</font>  <font color="#6497b1"><noframes></noframes> vasilaky</font></h1>
+			<a href="index.html" style="font-size: 14.5px;"><h1><font color="#666547"><noframes></noframes> kathryn</font> <font color="#b3cde0"><noframes></noframes> (katya)</font>  <font color="#6497b1"><noframes></noframes> vasilaky</font></h1></a><br />
 		</div>
 				<div id="sidebar">
 						
@@ -145,8 +145,8 @@
 		<br></br>
 		March 27, 2014
 		<a href="http://www.meetup.com/NYC-PyLadies/events/164157682/">Python for Beginners @ Tipping Point: Part I</a>
-		<br></br>
-		<img src="untapt_backprop.JPG" width= 550 height = 200 alt="Backpropagation Algorithm" >
+<!-- 		<br></br>
+		<img src="untapt_backprop.JPG" width= 550 height = 200 alt="Backpropagation Algorithm" > -->
 		</p>
 						
 =		
