--- a/publications.html
+++ b/publications.html
@@ -69,6 +69,7 @@
 					
 <p> 
 	Baul, Tushi, Dean Karlan, Kentaro Toyama, Kathryn Vasilaky <a href="http://deankarlan.com/Academic-Papers.html">Improving Smallholder Agriculture via Video-BasedGroup Extension</a> (2024)<em> Journal of Development Economics</em>, forthcoming. 
+	<a href= https://voxdev.org/topic/agriculture/effective-agricultural-advice-scale-evidence-india>Vox Dev Coverage</a>   
 	<br></br>
 	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, <a href="https://authors.elsevier.com/sd/article/S0167-2681(23)00377-3">How social structure shapes female competition throughout her lifetime</a> (2023) <em> Journal of Economic Behavior and Organization, 216, 433-456</em>.
 	<br></br>
