--- a/teaching.html
+++ b/teaching.html
@@ -47,7 +47,7 @@
 								<br></br>
 								<a href="publications.html"style="font-size: 14.5px;">research</a><br />
 								<br></br>
-               							 <a href="media.html"style="font-size: 14.5px;">research</a><br />
+               							 <a href="media.html"style="font-size: 14.5px;">media</a><br />
                 						<br></br>
 								<a href="teaching.html"style="font-size: 14.5px;">teaching</a><br />
 								<br></br>
