--- a/media.html
+++ b/media.html
@@ -49,8 +49,8 @@
 								<br></br>
 								<a href="publications.html"style="font-size: 14.5px;">research</a><br />
 								<br></br>
-                <a href="media.html"style="font-size: 14.5px;">research</a><br />
-                <br></br>
+               							<a href="media.html"style="font-size: 14.5px;">media</a><br />
+                						<br></br>
 								<a href="teaching.html"style="font-size: 14.5px;">teaching</a><br />
 								<br></br>
 								<a href="field.html"style="font-size: 14.5px;">field work</a><br />
