--- a/media.html
+++ b/media.html
@@ -31,7 +31,7 @@
 		
 		<div id="container">
 			<p>
-				<img src="images/header4.png" style = "width:50;height:100;"  alt="" border="0" title=""  /><br />
+				<img src="images/uganda.png" style = "width:50;height:100;"  alt="" border="0" title=""  /><br />
 	
 				<h1 style="color:gray;font-size:11.5px;"> Mbour, Fatick, Kaolack, Senegal</h1>
 			</p>
