--- a/publications.html
+++ b/publications.html
@@ -124,16 +124,15 @@
 
 	<!--<a href="https://drive.google.com/file/d/1a4-BGia1TuHsm6XDGfSuYVUnoQCo66uw/view">draft.</a>-->
 	<br></br>
-	Hill, Ruth, Carolina Mej&iacutea-Mantilla, Kathryn Vasilaky, "Vanishing Returns? Potential Returns and Constraints to Input Adoption among Smallholder Farmers in Uganda." World Bank Research Paper Vol. 1, No. 8627, (2020) <em><a href="http://documents.worldbank.org/curated/en/726321540832524595/Vanishing-Returns-Potential-Returns-and-Constraints-to-Input-Adoption-among-Smallholder-Farmers-in-Uganda"></a> R&R</em>.
-
+	Hill, Ruth, Carolina Mej&iacutea-Mantilla, Kathryn Vasilaky, <a href="https://elibrary.worldbank.org/doi/abs/10.1596/1813-9450-8627">Vanishing Returns? Potential Returns and Constraints to Input Adoption among Smallholder Farmers in Uganda</a> World Bank Research Paper Vol. 1, No. 8627, (2020) <em><a href="http://documents.worldbank.org/curated/en/726321540832524595/Vanishing-Returns-Potential-Returns-and-Constraints-to-Input-Adoption-among-Smallholder-Farmers-in-Uganda"></a> R&R</em>.			
 	<br></br>
-	Vasilaky, Kathryn, "A Generalized Ridge Regression Using an Iterative Solution: the Inverse Problem in Regression Analysis with a Stopping Rule," Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>, (2019) and accompanying <a href="https://github.com/kathrynthegreat/InverseProblem">git repo</a>. 
+	Vasilaky, Kathryn, A Generalized Ridge Regression Using an Iterative Solution: the Inverse Problem in Regression Analysis with a Stopping Rule, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>, (2019) and accompanying <a href="https://github.com/kathrynthegreat/InverseProblem">git repo</a>. 
 	<br></br>
-	Harou, Aur&eacutelie, Chia-Ying Lee, Daniel Osgood, Kathryn Vasilaky, "Measuring the Impact of Timely Disaster Response in the Philippines using Weather Extremes,"<em> Working Paper, (2019)</em>.
+	Harou, Aur&eacutelie, Chia-Ying Lee, Daniel Osgood, Kathryn Vasilaky, Measuring the Impact of Timely Disaster Response in the Philippines using Weather Extremes,<em> Working Paper, (2019)</em>.
 	<br></br>
 	
 	<h1>unpublished papers</h1>
-	Shirley, Kenny, Kathryn Vasilaky, Helen Greatrex, and Daniel Osgood, "A Hierarchal Bayesian Model of Weather Prediction with Multiple Time Series," Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A199595">Working Paper</a> (2016)</em>.
+	Shirley, Kenny, Kathryn Vasilaky, Helen Greatrex, and Daniel Osgood, A Hierarchal Bayesian Model of Weather Prediction with Multiple Time Series, Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A199595">Working Paper</a> (2016)</em>.
 		<br></br>
 	
 
