--- a/teaching.html
+++ b/teaching.html
@@ -64,9 +64,11 @@
 						
 							</div>
 				<div id="content">
-				
+			
 	<h1>teaching</h1>
-		Centre for Environmental and Resource Economics; Swedish University of Agricultural Sciences; Weeklong PhD Course on Machine Learning for Causal Inference (W/ <a="https://eduardo-zambrano.github.io/">Eduardo Zambrano</a>), September 11-15, 2023.
+		<a href="https://www.cere.se/en/machine-learning-for-causal-inference-course-taught-at-cere-by-katya-vasilaky-and-eduardo-zambrano-of-cal-poly/	">Centre for Environmental and Resource Economics; Swedish University of Agricultural Sciences; Weeklong PhD Course on Machine Learning for Causal Inference</a>
+		<br></br>			
+		 (W/ <a="https://eduardo-zambrano.github.io/">Eduardo Zambrano</a>), September 11-15, 2023.
 		<br></br>
 		Cal Poly, Economics 552 Causal Inference for Machine Learning and , Spring 2022 - present. 
 		<br></br>
