--- a/publications.html
+++ b/publications.html
@@ -69,12 +69,13 @@
 <h1>publications</h1>
 					
 <p> 
-	Baul, Tushi, Dean Karlan, Kentaro Toyama, Kathryn Vasilaky <a href="https://doi.org/10.1016/j.jdeveco.2024.103267">Improving Smallholder Agriculture via Video-Based Group Extension</a> (2024)<em> Journal of Development Economics</em>, forthcoming. 
+	Baul, Tushi, Dean Karlan, Kentaro Toyama, Kathryn Vasilaky <a href="https://doi.org/10.1016/j.jdeveco.2024.103267">Improving Smallholder Agriculture via Video-Based Group Extension</a> (2024)<em> Journal of Development Economics</em>. Vol. 169, No. 103267. 
 	<a href= https://voxdev.org/topic/agriculture/effective-agricultural-advice-scale-evidence-india>Vox Dev Coverage</a>   
 	<br></br>
 	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, <a href="https://authors.elsevier.com/sd/article/S0167-2681(23)00377-3">How social structure shapes female competition throughout her lifetime</a> (2023) <em> Journal of Economic Behavior and Organization, 216, 433-456</em>.
 	<br></br>
-	Vasilaky, Kathryn and Harou, Aurelie, and Alfredo, Katherine and Kapur, Ishita. <a href= https://authors.elsevier.com/sd/article/S0095-0696(23)00020-7>What works for water conservation? Evidence from a field experiment in India</a>, (2023) <em>Journal of Environmental Economics and Management, 119, 102802</em><em></em>. <a href= https://blogs.worldbank.org/water/what-works-water-conservation-insights-study-haryana-india>World Bank Coverage</a> 
+	Vasilaky, Kathryn and Harou, Aurelie, and Alfredo, Katherine and Kapur, Ishita. <a href= https://authors.elsevier.com/sd/article/S0095-0696(23)00020-7>What works for water conservation? Evidence from a field experiment in India</a>, (2023) <em>Journal of Environmental Economics and Management, 119, 102802</em><em></em>. 
+	<a href= https://blogs.worldbank.org/water/what-works-water-conservation-insights-study-haryana-india>World Bank Coverage</a> 
 <!-- 	<a href= https://youtu.be/SCgRFqlZS0w>Video w/ Interviews</a>				 -->
 	<br></br>
 
