--- a/field.html
+++ b/field.html
@@ -74,6 +74,8 @@ Co-Principal Investigator, RSCA, Cal Poly, Nudging Women into Business and Econo
 <br></br>
 Co-Principal Investigator, USDA, Immigration Reform and Farm Labor Shortages $500,000, 2019-2021
 <br></br>
+Principal Investigator, RSCA, Cal Poly, Correcting for algorithmic confounding bias $8,985, 2019-2020
+<br></br>					
 Co-Principal Investigator, Bill and Melinda Gates Foundation, <a href = "http://gcgh.grandchallenges.org/grant/multimodal-satellite-rainfall-measurement-index-insurance"> Multimodal Satellite Rainfall Measurement for Index Insurance</a>, $100,000, 2016-2018
 <br></br>
 Co-Principal Investigator, World Bank, International Finance Corporation, Evaluating the Timeliness of Disaster Response $200,000, 2015-2017
