--- a/posts.html
+++ b/posts.html
@@ -68,7 +68,12 @@
 
 						
 <p>	
-	
+
+Seminar Speaker, Intraday farm productivity bonuses and their peer effects: Evidence from a field experiment. Center for Economic Institutions at Hitotsubashi University, August 2024.
+<br></br>
+Seminar Speaker, Intraday farm productivity bonuses and their peer effects: Evidence from a field experiment. Kobe Univeristy, Graduate School of Economics, August 2024.
+<br></br>
+Conference Speaker. When do people donate? The impact of events and media on military donations during Russia’s invasion of Ukraine. 99th Annual WEAI, Seattle, WA, June 2024.			
 <br></br>	
 Conference Speaker, When the pickings are good: Estimating the dynamic effects of pay for performance for workers in the field, LACEA/LAMES Annual Meeting 2023 Bogotá, Colombia, 11/15/23
 <br></br>
