--- a/field.html
+++ b/field.html
@@ -68,6 +68,10 @@
 						<h1>grants</h1>
 						
 						<p>
+Principal Investigator, Innovations for Poverty Action, War, Identity and its Economic Consequences in Ukraine $9,961, 2025-2026
+<br></br>
+Principal Investigator, RSCA, Cal Poly, Addressing Prediction Biases in Agricultural Yields with Remote Sensing $12,500, 2025-2026
+<br></br>
 Principal Investigator, Noyce School of Computing, Cal Poly, Selection Bias in Learning to Rank $14,000, 2023-2024
 <br></br>
 Co-Principal Investigator, RSCA, Cal Poly, Nudging Women into Business and Economics $18,000, 2021-2022
