--- a/publications.html
+++ b/publications.html
@@ -117,7 +117,7 @@
 	<h1>working papers</h1>
 	Klymak, Margaryta, Andrew Kosenko, Oleg Korenok, Dariia Mykhailyshyna and Katya Vasilaky, "Charitable giving during the war." 2025 CSAE Working Paper Series.
 	<br></br>
-	J.M. Brock and K.N. Vasilaky, "Does Background Uncertainty Narrow  the Gender Competition Gap? An experiment with non-students." mimeo.
+	J.M. Brock and K.N. Vasilaky, "Does Background Uncertainty Narrow  the Gender Competition Gap? An experiment with non-students." 
 	<br></br>
 	Aubrac,Charlotte, Christopher Magomba, Soumya Balasubramanya, Kathryn Vasilaky, "Realized and elicited cooperation under water scarcity: Evidence from a field experiment in Tanzania" <em> Under review.</em> 
 	<br></br>
@@ -128,11 +128,11 @@
 
 	<!--<a href="https://drive.google.com/file/d/1a4-BGia1TuHsm6XDGfSuYVUnoQCo66uw/view">draft.</a>-->
 	<br></br>
-	Hill, Ruth, Carolina Mej&iacutea-Mantilla, Kathryn Vasilaky, <a href="https://elibrary.worldbank.org/doi/abs/10.1596/1813-9450-8627">Vanishing Returns? Potential Returns and Constraints to Input Adoption among Smallholder Farmers in Uganda</a> World Bank Research Paper Vol. 1, No. 8627, (2020) <em><a href="http://documents.worldbank.org/curated/en/726321540832524595/Vanishing-Returns-Potential-Returns-and-Constraints-to-Input-Adoption-among-Smallholder-Farmers-in-Uganda"></a> R&R</em>.			
+	Hill, Ruth, Carolina Mej&iacutea-Mantilla, Kathryn Vasilaky, <a href="https://elibrary.worldbank.org/doi/abs/10.1596/1813-9450-8627">Vanishing Returns? Potential Returns and Constraints to Input Adoption among Smallholder Farmers in Uganda</a> World Bank Research Paper Vol. 1, No. 8627 <em><a href="http://documents.worldbank.org/curated/en/726321540832524595/Vanishing-Returns-Potential-Returns-and-Constraints-to-Input-Adoption-among-Smallholder-Farmers-in-Uganda"></a> R&R</em>.			
 	<br></br>
-	Vasilaky, Kathryn, A Generalized Ridge Regression Using an Iterative Solution: the Inverse Problem in Regression Analysis with a Stopping Rule, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>, (2019) and accompanying <a href="https://github.com/kathrynthegreat/InverseProblem">git repo</a>. 
+	Vasilaky, Kathryn, A Generalized Ridge Regression Using an Iterative Solution: the Inverse Problem in Regression Analysis with a Stopping Rule, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em> and accompanying <a href="https://github.com/kathrynthegreat/InverseProblem">git repo</a>. 
 	<br></br>
-	Harou, Aur&eacutelie, Chia-Ying Lee, Daniel Osgood, Kathryn Vasilaky, Measuring the Impact of Timely Disaster Response in the Philippines using Weather Extremes,<em> Working Paper, (2019)</em>.
+	Harou, Aur&eacutelie, Chia-Ying Lee, Daniel Osgood, Kathryn Vasilaky, Measuring the Impact of Timely Disaster Response in the Philippines using Weather Extremes,<em> Working Paper </em>.
 	<br></br>
 	
 	<h1>unpublished papers</h1>
