--- a/publications.html
+++ b/publications.html
@@ -117,7 +117,7 @@
 	<h1>working papers</h1>
 	Klymak, Margaryta, Andrew Kosenko, Oleg Korenok, Dariia Mykhailyshyna and Katya Vasilaky, "Charitable giving during the war." 2025 CSAE Working Paper Series.
 	<br></br>
-	J.M. Brock and K.N. Vasilaky, "Does Background Uncertainty Narrow  the Gender Competition Gap? An experiment with non-students." 
+	Brock, J.M., Kathryn Vasilaky, "Does Background Uncertainty Narrow  the Gender Competition Gap? An experiment with non-students." 
 	<br></br>
 	Aubrac,Charlotte, Christopher Magomba, Soumya Balasubramanya, Kathryn Vasilaky, "Realized and elicited cooperation under water scarcity: Evidence from a field experiment in Tanzania" <em> Under review.</em> 
 	<br></br>
