--- a/publications.html
+++ b/publications.html
@@ -115,7 +115,8 @@
 	<br></br>				
 	
 	<h1>working papers</h1>
-	Klymak, Margaryta, Andrew Kosenko, Oleg Korenok, Dariia Mykhailyshyna and Katya Vasilaky, "Charitable giving during the war." 2025 CSAE Working Paper Series.
+				
+	Klymak, Margaryta, Andrew Kosenko, Oleg Korenok, Dariia Mykhailyshyna and Katya Vasilaky, "Charitable giving during the war." <em><a href="https://ora.ox.ac.uk/objects/uuid:3b318155-eaa7-4d3d-90a8-7691e59d6942">2025 CSAE Working Paper Series</a></em>
 	<br></br>
 	Brock, J.M., Kathryn Vasilaky, "Does Background Uncertainty Narrow  the Gender Competition Gap? An experiment with non-students." 
 	<br></br>
@@ -126,9 +127,7 @@
 	<!-- World Bank Research Paper Vol. 12, No. 33, (2016) <em><a href="http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda">Economic Development and Cultural Change</a></em>.-->
 	
 
-	<!--<a href="https://drive.google.com/file/d/1a4-BGia1TuHsm6XDGfSuYVUnoQCo66uw/view">draft.</a>-->
-	<br></br>
-	Hill, Ruth, Carolina Mej&iacutea-Mantilla, Kathryn Vasilaky, <a href="https://elibrary.worldbank.org/doi/abs/10.1596/1813-9450-8627">Vanishing Returns? Potential Returns and Constraints to Input Adoption among Smallholder Farmers in Uganda</a> World Bank Research Paper Vol. 1, No. 8627 <em><a href="http://documents.worldbank.org/curated/en/726321540832524595/Vanishing-Returns-Potential-Returns-and-Constraints-to-Input-Adoption-among-Smallholder-Farmers-in-Uganda"></a> R&R</em>.			
+	<!--<a href="https://drive.google.com/file/d/1a4-BGia1TuHsm6XDGfSuYVUnoQCo66uw/view">draft.</a>-->		
 	<br></br>
 	Vasilaky, Kathryn, A Generalized Ridge Regression Using an Iterative Solution: the Inverse Problem in Regression Analysis with a Stopping Rule, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em> and accompanying <a href="https://github.com/kathrynthegreat/InverseProblem">git repo</a>. 
 	<br></br>
@@ -137,8 +136,8 @@
 	
 	<h1>unpublished papers</h1>
 	Shirley, Kenny, Kathryn Vasilaky, Helen Greatrex, and Daniel Osgood, A Hierarchal Bayesian Model of Weather Prediction with Multiple Time Series, Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A199595">Working Paper</a> (2016)</em>.
-		<br></br>
-	
+	<br></br>
+	Hill, Ruth, Carolina Mej&iacutea-Mantilla, Kathryn Vasilaky, <a href="https://elibrary.worldbank.org/doi/abs/10.1596/1813-9450-8627">Vanishing Returns? Potential Returns and Constraints to Input Adoption among Smallholder Farmers in Uganda</a> World Bank Research Paper Vol. 1, No. 8627 <em><a href="http://documents.worldbank.org/curated/en/726321540832524595/Vanishing-Returns-Potential-Returns-and-Constraints-to-Input-Adoption-among-Smallholder-Farmers-in-Uganda"></a> R&R</em>.	
 
 	<h1>reports</h1>
 	<br></br>
