--- a/publications.html
+++ b/publications.html
@@ -70,7 +70,8 @@
 					
 <p> 
 	Baul, Tushi, Dean Karlan, Kentaro Toyama, Kathryn Vasilaky <a href="https://doi.org/10.1016/j.jdeveco.2024.103267">Improving Smallholder Agriculture via Video-Based Group Extension</a> (2024)<em> Journal of Development Economics</em>. Vol. 169, No. 103267. 
-	<a href= https://voxdev.org/topic/agriculture/effective-agricultural-advice-scale-evidence-india>Vox Dev Coverage</a>, <a href= https://www.povertyactionlab.org/evaluation/video-based-group-extension-women-farmers-india-0>JPAL Summary</a>
+	<a href= https://voxdev.org/topic/agriculture/effective-agricultural-advice-scale-evidence-india>Vox Dev Coverage</a>, <a href= https://www.povertyactionlab.org/evaluation/video-based-group-extension-women-farmers-india-0>JPAL Summary</a>, <a href= https://www.povertyactionlab.org/case-study/video-based-support-small-scale-farmers-around-world?>JPAL Insights</a> 
+	
 	
 	<br></br>
 	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, <a href="https://authors.elsevier.com/sd/article/S0167-2681(23)00377-3">How social structure shapes female competition throughout her lifetime</a> (2023) <em> Journal of Economic Behavior and Organization, 216, 433-456</em>.
@@ -171,4 +172,5 @@
 
 </body>
 </html>
+
 
