--- a/field.html
+++ b/field.html
@@ -103,7 +103,7 @@ Dominican Republic (Northern) Group Insurance and Informal Networks. Internation
 <br></br>
 Philippines (Manila) The Effects of Disaster Response on Poverty and Inequality. Earth Institute, Columbia University and World Bank Philippines, September 2015.
 <br></br>
-<!--India (Punjab and Haryana) Water Measurement and Water Savings. Earth Institute, Columbia University and Haryana Irrigation Management Institute, May 2015 – March 2016.--> 
+India (Punjab and Haryana) Water Measurement and Water Savings. Earth Institute, Columbia University and Haryana Irrigation Management Institute, May 2015 – March 2016.
 <br></br>
 Senegal (Koungheul) and Honduras (Tegucigalpa) The Effects of Group Size and Information in Index Insurance. International Research Institute for Climate and Society, Columbia University, and WFP, May 2015. 
 <br></br>
