--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		
 		<div id="container">
 			<p>
-				<img src="images/kyozenJukai.jpg" style = "width:10;height:10;" alt="" border="0" title=""  /><br />
+				<img src="images/kyozenJukai.jpg" style="width:150px; height:auto;" alt="" />
 			</p>
 		
 		<div >
@@ -192,6 +192,7 @@ for <a href="https://fcni.org//"> Family Care Network </a>
 
 </body>
 </html>
+
 
 
 
