--- a/cv.html
+++ b/cv.html
@@ -67,7 +67,7 @@
 		
 		</br>
 		
-			<img src="images/bost.jpeg" style = "width:400px;height:400;">
+			<!-- <img src="images/bost.jpeg" style = "width:400px;height:400;"> -->
 		<br></br>
 			<a href="https://github.com/kathrynthegreat/kathrynthegreat.github.io/blob/master/CV_KvAsilaky.pdf">cv</a>
 		<br />
