--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     }
     </style>
 
-    <title>Kathryn Vasilaky - Associate Professor of Economics</title>
+    <title>Katya Vasilaky - Associate Professor of Economics</title>
 
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
