--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
 document.addEventListener('DOMContentLoaded', function () {
   console.log('Script de pestañas cargado (sin hash)');
 
-  const validTabs = ['Bio', 'Research', 'Grants-fieldwork', 'teaching'];
+  const validTabs = ['Bio', 'Research', 'Grants-fieldwork', 'Teaching'];
 
   function switchTab(tabId, push = true) {
     console.log('Cambiando a pestaña:', tabId);
