--- a/index.html
+++ b/index.html
@@ -284,12 +284,12 @@
         <div class="tab-pane active" id="Bio" role="tabpanel">
           <section class="resume-section p-3 p-lg-5 d-flex d-column">
             <div class="my-auto">
-              <h1 class="mb-0">Kathryn
+              <h1 class="mb-0">Katya 
                 <span class="text-primary">Vasilaky</span>
               </h1>
               <br>
               <div class="subheading mb-5" style="line-height: 0.25;">
-                Associate Professor of Economics
+                Associate Professor </br> of Economics
               </div>
 
               <p class="mb-4 text-justify">I am an <a href="https://orfalea.calpoly.edu/Bio-us/directory/katya-vasilaky/">Associate Professor</a> at the Department of Economics and Faculty Affiliate at the <a href="https://noyce.calpoly.edu/">Noyce School of Applied Computing</a>, Cal Poly. I'm also a Research Affiliate at the <a href="https://people.climate.columbia.edu/users/profile/kathryn-n-vasilaky">Climate School</a> at Columbia University, Faculty Affiliate at <a href="https://cega.berkeley.edu/">CEGA</a>, UC Berkeley, an Invited Researcher at the
