--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
               </h1>
               <br>
               <div class="subheading mb-5" style="line-height: 0.25;">
-                Associate Professor </br> of Economics
+                Associate Professor of Economics
               </div>
 
               <p class="mb-4 text-justify">I am an <a href="https://orfalea.calpoly.edu/Bio-us/directory/katya-vasilaky/">Associate Professor</a> at the Department of Economics and Faculty Affiliate at the <a href="https://noyce.calpoly.edu/">Noyce School of Applied Computing</a>, Cal Poly. I'm also a Research Affiliate at the <a href="https://people.climate.columbia.edu/users/profile/kathryn-n-vasilaky">Climate School</a> at Columbia University, Faculty Affiliate at <a href="https://cega.berkeley.edu/">CEGA</a>, UC Berkeley, an Invited Researcher at the
