--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
               <p class="mb-4 text-justify">I hold a Ph.D. from the University of Maryland and a B.A. from Columbia University.</p>
               <p class="mb-5 text-justify">
-                Beyond academia, I am a co-founder of <a href="http://www.groundtruthdata.com/">Ground Truth Data</a>, a startup focused on granular weather sensing, and I co-run <a href="https://www.meetup.com/PydataSLO/">PyData SLO</a>. My diverse interests include volunteering with <a href="https://wwoof.net/">WWOOF</a>, teaching for <a href="https://girlswhocode.com">Girls Who Code</a>, and contributing to <a href="https://econ4ua.org/">Economists for Ukraine</a>. In a previous life, I was a professional ballet dancer with the <a href="https://www.sfballet.org/">San Francisco Ballet</a> company, and today I stay creative through improvised theater.
+                <!-- Beyond academia, I am a co-founder of <a href="http://www.groundtruthdata.com/">Ground Truth Data</a>, a startup focused on granular weather sensing, and I co-run <a href="https://www.meetup.com/PydataSLO/">PyData SLO</a>. My diverse interests include volunteering with <a href="https://wwoof.net/">WWOOF</a>, teaching for <a href="https://girlswhocode.com">Girls Who Code</a>, and contributing to <a href="https://econ4ua.org/">Economists for Ukraine</a>. In a previous life, I was a professional ballet dancer with the <a href="https://www.sfballet.org/">San Francisco Ballet</a> company, and today I stay creative through improvised theater. -->
               </p>
 
 <li class="list-inline-item">
