--- a/publications.html
+++ b/publications.html
@@ -114,7 +114,7 @@
 	
 	<h1>working papers</h1>
 				
-	Klymak, Margaryta, Andrew Kosenko, Oleg Korenok, Dariia Mykhailyshyna and Katya Vasilaky, "Charitable giving during the war."RR at Review of Economics and Statistics <em><a href="https://ora.ox.ac.uk/objects/uuid:3b318155-eaa7-4d3d-90a8-7691e59d6942">2025 CSAE Working Paper Series</a></em>, <a href= https://cepr.org/voxeu/columns/charitable-giving-wartime-evidence-ukraines-war-fundraising>Vox EU Coverage</a>,
+	Klymak, Margaryta, Andrew Kosenko, Oleg Korenok, Dariia Mykhailyshyna and Katya Vasilaky, "Charitable giving during the war" RR at Review of Economics and Statistics <em><a href="https://ora.ox.ac.uk/objects/uuid:3b318155-eaa7-4d3d-90a8-7691e59d6942">2025 CSAE Working Paper Series</a></em>, <a href= https://cepr.org/voxeu/columns/charitable-giving-wartime-evidence-ukraines-war-fundraising>Vox EU Coverage</a>,
 	<br></br>
 
 					
@@ -172,6 +172,7 @@
 
 </body>
 </html>
+
 
 
 
