--- a/index.html
+++ b/index.html
@@ -489,9 +489,7 @@
       <div class="resume-item mb-3">
         <p>
           <strong>Klymak, M., Kosenko, A., Korenok, O., Mykhailyshyna, D., Vasilaky, K.</strong>
-          Charitable Giving During the War.<em> RR at Review of Economics and Statistics</em> 
-           <br />
-          <em>2025 CSAE Working Paper Series</em>.
+          Charitable Giving During the War.<em> RR at Review of Economics and Statistics</em> <em>2025 CSAE Working Paper Series</em>.
           <br />
           <a href="https://ora.ox.ac.uk/objects/uuid:3b318155-eaa7-4d3d-90a8-7691e59d6942" target="_blank">Working Paper</a> ·
           <a href="https://cepr.org/voxeu/columns/charitable-giving-wartime-evidence-ukraines-war-fundraising" target="_blank">VoxEU Coverage</a>
