--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
       </ul>
 <div class="photo-container">
   <div class="photo-item">
-    <img src="img/background.jpg" alt="" class="field-photo" style="width: 100%; max-width: 800px; height: auto;">
+    <!-- <img src="img/background.jpg" alt="" class="field-photo" style="width: 100%; max-width: 800px; height: auto;"> -->
   </div>
 </div>
       <h3 class="section-subtitle mt-5">Field Work</h3>
