--- a/index.html
+++ b/index.html
@@ -694,13 +694,13 @@
 
       <h3 class="section-subtitle mt-5">Personal Field Work</h3>
 
-      <p class="cv-paragraph">
+      <!-- <p class="cv-paragraph">
         I actively farm internationally through
         <a href="https://wwoof.es/" target="_blank">WWOOF</a>
         and as a farm lead for
         <a href="https://www.firstfruitsslo.org/" target="_blank">First Fruits Farm</a>
         in San Luis Obispo, CA.
-      </p>
+      </p> -->
 
       <ul class="cv-list">
         <li>Spain (Nieva) — WWOOF Spain, <span class="cv-meta">2019</span></li>
