--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
         <li>Tanzania — Markets for Cotton By-Products, <span class="cv-meta">2009</span></li>
       </ul>
 
-      <h3 class="section-subtitle mt-5">Field Work Photos</h3>
+      <!-- <h3 class="section-subtitle mt-5">Field Work Photos</h3>
 
       <div class="photo-container">
         <div class="photo-item">
@@ -686,9 +686,9 @@
         </div>
         <div class="photo-item">
           <img src="img/2.jpg" alt="" class="field-photo">
-        </div>
+        </div> -->
         <div class="photo-item">
-          <img src="img/3.jpg" alt="" class="field-photo">
+          <img src="images/uganda.jpg" alt="" class="field-photo">
         </div>
       </div>
 
