--- a/index.html
+++ b/index.html
@@ -224,6 +224,13 @@
         box-shadow: 0 6px 20px rgba(52, 152, 219, 0.4);
         color: white;
     }
+
+  .field-photo{
+  max-width: 260px;
+  width: 100%;
+  height: auto;
+  display: block;
+}
     </style>
 
     <title>Kathryn Vasilaky - Associate Professor of Economics</title>
