--- a/index.html
+++ b/index.html
@@ -602,6 +602,15 @@
 
       <ul class="cv-list">
         <li>
+          <strong>Principal Investigator</strong>, CEGA UC Berkeley Development Economics Challenge —
+          <a href="https://cega.berkeley.edu/collection/2025-fall-development-economics-challenge/" target="_blank">
+            Reintegrating Internally Displaced Persons, Veterans, and Women in the Post-Invasion Labor Market in Ukraine
+          </a>,
+          <span class="cv-meta">$11,250 · 2026–2027</span>
+        </li>
+
+        
+        <li>
           <strong>Principal Investigator</strong>, Innovations for Poverty Action —
           <a href="https://www.povertyactionlab.org/initiative-project/war-identity-and-its-economic-consequences-ukraine" target="_blank">
             War, Identity and its Economic Consequences in Ukraine
@@ -670,6 +679,8 @@
       <h3 class="section-subtitle mt-5">Field Work</h3>
 
       <ul class="cv-list">
+          
+        <li>Ukraine — War, Identity and its Economic Consequences in Ukraine (IPA/Kings College/Cal Poly/CEGA), <span class="cv-meta">2025</span></li>
         <li>Central Coast (California) — Immigration Reform and Farm Labor Shortages (USDA), <span class="cv-meta">2020</span></li>
         <li>India (Maharashtra) — Satellite Rainfall Measurement for Index Insurance, <span class="cv-meta">2016–2017</span></li>
         <li>Dominican Republic — Group Insurance and Informal Networks, <span class="cv-meta">2014 & 2016</span></li>
