--- a/index.html
+++ b/index.html
@@ -619,6 +619,16 @@
         </li>
 
         <li>
+          <strong>Principal Investigator</strong>, Cal Poly Teacher Scholar Grant —
+          <a href="https://research.calpoly.edu/2025-26-teacher-scholar-mini-grant-awardees" target="_blank">
+            Identity, Training, and Opportunity: Integrating Ukraine's IDPs into New Labor Markets and Communities
+          </a>,
+          <span class="cv-meta">$14,664 · 2025–2026</span>
+        </li>
+
+        
+
+        <li>
           <strong>Principal Investigator</strong>, RSCA, Cal Poly — Addressing Prediction Biases in Agricultural Yields with Remote Sensing,
           <span class="cv-meta">$12,500 · 2025–2026</span>
         </li>
