--- a/index.html
+++ b/index.html
@@ -226,11 +226,11 @@
     }
 
   .field-photo{
-  max-width: 260px;
-  width: 100%;
-  height: auto;
-  display: block;
-}
+    width: 100%;
+    max-width: 900px;   /* increase this (e.g., 1100px) to make it wider on desktop */
+    height: auto;
+    display: block;
+  }
     </style>
 
     <title>Kathryn Vasilaky - Associate Professor of Economics</title>
