--- a/index.html
+++ b/index.html
@@ -225,12 +225,14 @@
         color: white;
     }
 
-  .field-photo{
-    width: 100%;
-    max-width: 900px;   /* increase this (e.g., 1100px) to make it wider on desktop */
-    height: auto;
-    display: block;
-  }
+.field-photo{
+  width: 100%;
+  max-width: 1100px;   /* wider on desktop */
+  height: 420px;       /* taller (increase to taste) */
+  object-fit: cover;   /* fills the box by cropping */
+  object-position: center; /* crop from the center */
+  display: block;
+}
     </style>
 
     <title>Kathryn Vasilaky - Associate Professor of Economics</title>
