--- a/index.html
+++ b/index.html
@@ -692,8 +692,8 @@
 
       <ul class="cv-list">
           
-        <li>Ukraine — War, Identity and its Economic Consequences in Ukraine (IPA/Kings College/Cal Poly/CEGA), <span class="cv-meta">2025</span></li>
-        <li>Central Coast (California) — Immigration Reform and Farm Labor Shortages (USDA), <span class="cv-meta">2020</span></li>
+        <li>Ukraine — War, Identity and its Economic Consequences in Ukraine, <span class="cv-meta">2025</span></li>
+        <li>Central Coast (California) — Immigration Reform and Farm Labor Shortages, <span class="cv-meta">2020</span></li>
         <li>India (Maharashtra) — Satellite Rainfall Measurement for Index Insurance, <span class="cv-meta">2016–2017</span></li>
         <li>Dominican Republic — Group Insurance and Informal Networks, <span class="cv-meta">2014 & 2016</span></li>
         <li>Philippines (Manila) — Disaster Response and Poverty, <span class="cv-meta">2015</span></li>
@@ -705,6 +705,7 @@
         <li>Uganda — Female Adolescent Outcomes, <span class="cv-meta">2012</span></li>
         <li>Malawi — Gender & Competition in Villages, <span class="cv-meta">2011</span></li>
         <li>Uganda — Malaria Diagnosis Feasibility, <span class="cv-meta">2009–2010</span></li>
+        <li>Uganda — Cotton Cash Crop and Female Productivity, <span class="cv-meta">2009–2010</span></li>
         <li>Tanzania — Markets for Cotton By-Products, <span class="cv-meta">2009</span></li>
       </ul>
 
